Add base server

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
+  "author": "Andrew Shoener",
+  "main": "index.js",
+  "dependencies": {
+    "express": "^4.16.4"
+  },
   "description": "",
-  "main": "server.js",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Andrew Shoener",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.16.4"
-  }
+  "type": "module"
 }
