--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "Andrew Shoener",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "uuid": "^9.0.1"
   },
   "description": "",
   "license": "MIT",
