--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "license": "MIT",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module"
